# SmartContract

./: .gitignore  Cargo.toml  README.md  lib.rs  pos_terminal.py  simulator.py
card_contract/: lib.rs
intermediary_escrow/: Cargo.toml  README.md  lib.rs
smart_card/: Cargo.toml  lib.rs
smart_card/src/: main.rs
